added first lab

--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4ed55602-5ac5-4d09-898b-229a2505798a",
    "metadata": {},
    "outputs": [],
@@ -12,6 +12,530 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8f00779-475f-40e7-aecf-f1d4f9a1ed14",
+   "metadata": {},
+   "source": [
+    "# Reading the dataset into a Pandas dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0a1c76e5-0268-43ea-a51c-6281d7e49ae5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://raw.githubusercontent.com/div-yan-shu-13/Divyanshu-Bhardwaj-23FE10CSE00063-ML-Lab-Sem-6/refs/heads/main/Data/USA_Housing.csv\"\n",
+    "df = pd.read_csv(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fb16419-0164-471d-a55c-9ace2608f781",
+   "metadata": {},
+   "source": [
+    "# Using .head() to show the first five rows of the dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0e84e63f-8266-4831-8468-bc8185f271d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Avg. Area Income</th>\n",
+       "      <th>Avg. Area House Age</th>\n",
+       "      <th>Avg. Area Number of Rooms</th>\n",
+       "      <th>Avg. Area Number of Bedrooms</th>\n",
+       "      <th>Area Population</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Address</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>79545.458574</td>\n",
+       "      <td>5.682861</td>\n",
+       "      <td>7.009188</td>\n",
+       "      <td>4.09</td>\n",
+       "      <td>23086.800503</td>\n",
+       "      <td>1.059034e+06</td>\n",
+       "      <td>208 Michael Ferry Apt. 674\\nLaurabury, NE 3701...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>79248.642455</td>\n",
+       "      <td>6.002900</td>\n",
+       "      <td>6.730821</td>\n",
+       "      <td>3.09</td>\n",
+       "      <td>40173.072174</td>\n",
+       "      <td>1.505891e+06</td>\n",
+       "      <td>188 Johnson Views Suite 079\\nLake Kathleen, CA...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>61287.067179</td>\n",
+       "      <td>5.865890</td>\n",
+       "      <td>8.512727</td>\n",
+       "      <td>5.13</td>\n",
+       "      <td>36882.159400</td>\n",
+       "      <td>1.058988e+06</td>\n",
+       "      <td>9127 Elizabeth Stravenue\\nDanieltown, WI 06482...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>63345.240046</td>\n",
+       "      <td>7.188236</td>\n",
+       "      <td>5.586729</td>\n",
+       "      <td>3.26</td>\n",
+       "      <td>34310.242831</td>\n",
+       "      <td>1.260617e+06</td>\n",
+       "      <td>USS Barnett\\nFPO AP 44820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>59982.197226</td>\n",
+       "      <td>5.040555</td>\n",
+       "      <td>7.839388</td>\n",
+       "      <td>4.23</td>\n",
+       "      <td>26354.109472</td>\n",
+       "      <td>6.309435e+05</td>\n",
+       "      <td>USNS Raymond\\nFPO AE 09386</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Avg. Area Income  Avg. Area House Age  Avg. Area Number of Rooms  \\\n",
+       "0      79545.458574             5.682861                   7.009188   \n",
+       "1      79248.642455             6.002900                   6.730821   \n",
+       "2      61287.067179             5.865890                   8.512727   \n",
+       "3      63345.240046             7.188236                   5.586729   \n",
+       "4      59982.197226             5.040555                   7.839388   \n",
+       "\n",
+       "   Avg. Area Number of Bedrooms  Area Population         Price  \\\n",
+       "0                          4.09     23086.800503  1.059034e+06   \n",
+       "1                          3.09     40173.072174  1.505891e+06   \n",
+       "2                          5.13     36882.159400  1.058988e+06   \n",
+       "3                          3.26     34310.242831  1.260617e+06   \n",
+       "4                          4.23     26354.109472  6.309435e+05   \n",
+       "\n",
+       "                                             Address  \n",
+       "0  208 Michael Ferry Apt. 674\\nLaurabury, NE 3701...  \n",
+       "1  188 Johnson Views Suite 079\\nLake Kathleen, CA...  \n",
+       "2  9127 Elizabeth Stravenue\\nDanieltown, WI 06482...  \n",
+       "3                          USS Barnett\\nFPO AP 44820  \n",
+       "4                         USNS Raymond\\nFPO AE 09386  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "255b0248-715c-448e-8b6c-e6babe8976a1",
+   "metadata": {},
+   "source": [
+    "# Using .dtypes to display the data type of each column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "57f36da7-1415-4dd0-83e1-b9e4d1d24d39",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Avg. Area Income                float64\n",
+       "Avg. Area House Age             float64\n",
+       "Avg. Area Number of Rooms       float64\n",
+       "Avg. Area Number of Bedrooms    float64\n",
+       "Area Population                 float64\n",
+       "Price                           float64\n",
+       "Address                             str\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa2019bb-4b54-4c97-acda-bfe1c68e4994",
+   "metadata": {},
+   "source": [
+    "# Using .info to give a complete structural summary of the dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f34ef1f3-55fe-444a-86af-3898d53ce50f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.DataFrame'>\n",
+      "RangeIndex: 5000 entries, 0 to 4999\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column                        Non-Null Count  Dtype  \n",
+      "---  ------                        --------------  -----  \n",
+      " 0   Avg. Area Income              5000 non-null   float64\n",
+      " 1   Avg. Area House Age           5000 non-null   float64\n",
+      " 2   Avg. Area Number of Rooms     5000 non-null   float64\n",
+      " 3   Avg. Area Number of Bedrooms  5000 non-null   float64\n",
+      " 4   Area Population               5000 non-null   float64\n",
+      " 5   Price                         5000 non-null   float64\n",
+      " 6   Address                       5000 non-null   str    \n",
+      "dtypes: float64(6), str(1)\n",
+      "memory usage: 273.6 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info(verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d881858e-64b7-4ffa-8d3c-2b9a16f138d8",
+   "metadata": {},
+   "source": [
+    "# Analyzing the data using 5 number analysis with given percentiles using describe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2d3c1f8c-34ce-46b0-8cb8-49e4dd187eaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Avg. Area Income</th>\n",
+       "      <th>Avg. Area House Age</th>\n",
+       "      <th>Avg. Area Number of Rooms</th>\n",
+       "      <th>Avg. Area Number of Bedrooms</th>\n",
+       "      <th>Area Population</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>5000.000000</td>\n",
+       "      <td>5000.000000</td>\n",
+       "      <td>5000.000000</td>\n",
+       "      <td>5000.000000</td>\n",
+       "      <td>5000.000000</td>\n",
+       "      <td>5.000000e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>68583.108984</td>\n",
+       "      <td>5.977222</td>\n",
+       "      <td>6.987792</td>\n",
+       "      <td>3.981330</td>\n",
+       "      <td>36163.516039</td>\n",
+       "      <td>1.232073e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>10657.991214</td>\n",
+       "      <td>0.991456</td>\n",
+       "      <td>1.005833</td>\n",
+       "      <td>1.234137</td>\n",
+       "      <td>9925.650114</td>\n",
+       "      <td>3.531176e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>17796.631190</td>\n",
+       "      <td>2.644304</td>\n",
+       "      <td>3.236194</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>172.610686</td>\n",
+       "      <td>1.593866e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10%</th>\n",
+       "      <td>55047.633980</td>\n",
+       "      <td>4.697755</td>\n",
+       "      <td>5.681951</td>\n",
+       "      <td>2.310000</td>\n",
+       "      <td>23502.845262</td>\n",
+       "      <td>7.720318e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>61480.562388</td>\n",
+       "      <td>5.322283</td>\n",
+       "      <td>6.299250</td>\n",
+       "      <td>3.140000</td>\n",
+       "      <td>29403.928702</td>\n",
+       "      <td>9.975771e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>68804.286404</td>\n",
+       "      <td>5.970429</td>\n",
+       "      <td>7.002902</td>\n",
+       "      <td>4.050000</td>\n",
+       "      <td>36199.406689</td>\n",
+       "      <td>1.232669e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70%</th>\n",
+       "      <td>74231.546326</td>\n",
+       "      <td>6.496726</td>\n",
+       "      <td>7.518946</td>\n",
+       "      <td>4.400000</td>\n",
+       "      <td>41380.031481</td>\n",
+       "      <td>1.418396e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90%</th>\n",
+       "      <td>82081.188283</td>\n",
+       "      <td>7.243978</td>\n",
+       "      <td>8.274222</td>\n",
+       "      <td>6.100000</td>\n",
+       "      <td>48813.618633</td>\n",
+       "      <td>1.684621e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>107701.748378</td>\n",
+       "      <td>9.519088</td>\n",
+       "      <td>10.759588</td>\n",
+       "      <td>6.500000</td>\n",
+       "      <td>69621.713378</td>\n",
+       "      <td>2.469066e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Avg. Area Income  Avg. Area House Age  Avg. Area Number of Rooms  \\\n",
+       "count       5000.000000          5000.000000                5000.000000   \n",
+       "mean       68583.108984             5.977222                   6.987792   \n",
+       "std        10657.991214             0.991456                   1.005833   \n",
+       "min        17796.631190             2.644304                   3.236194   \n",
+       "10%        55047.633980             4.697755                   5.681951   \n",
+       "25%        61480.562388             5.322283                   6.299250   \n",
+       "50%        68804.286404             5.970429                   7.002902   \n",
+       "70%        74231.546326             6.496726                   7.518946   \n",
+       "90%        82081.188283             7.243978                   8.274222   \n",
+       "max       107701.748378             9.519088                  10.759588   \n",
+       "\n",
+       "       Avg. Area Number of Bedrooms  Area Population         Price  \n",
+       "count                   5000.000000      5000.000000  5.000000e+03  \n",
+       "mean                       3.981330     36163.516039  1.232073e+06  \n",
+       "std                        1.234137      9925.650114  3.531176e+05  \n",
+       "min                        2.000000       172.610686  1.593866e+04  \n",
+       "10%                        2.310000     23502.845262  7.720318e+05  \n",
+       "25%                        3.140000     29403.928702  9.975771e+05  \n",
+       "50%                        4.050000     36199.406689  1.232669e+06  \n",
+       "70%                        4.400000     41380.031481  1.418396e+06  \n",
+       "90%                        6.100000     48813.618633  1.684621e+06  \n",
+       "max                        6.500000     69621.713378  2.469066e+06  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe(percentiles=[0.1,0.25, 0.50, 0.70, 0.90])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b893672d-942a-45b8-95ab-b5911370cdf3",
+   "metadata": {},
+   "source": [
+    "# Now without giving percentiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ad7ac6b2-92f2-44f7-a95f-9544ee80b4ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Avg. Area Income</th>\n",
+       "      <th>Avg. Area House Age</th>\n",
+       "      <th>Avg. Area Number of Rooms</th>\n",
+       "      <th>Avg. Area Number of Bedrooms</th>\n",
+       "      <th>Area Population</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>5000.000000</td>\n",
+       "      <td>5000.000000</td>\n",
+       "      <td>5000.000000</td>\n",
+       "      <td>5000.000000</td>\n",
+       "      <td>5000.000000</td>\n",
+       "      <td>5.000000e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>68583.108984</td>\n",
+       "      <td>5.977222</td>\n",
+       "      <td>6.987792</td>\n",
+       "      <td>3.981330</td>\n",
+       "      <td>36163.516039</td>\n",
+       "      <td>1.232073e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>10657.991214</td>\n",
+       "      <td>0.991456</td>\n",
+       "      <td>1.005833</td>\n",
+       "      <td>1.234137</td>\n",
+       "      <td>9925.650114</td>\n",
+       "      <td>3.531176e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>17796.631190</td>\n",
+       "      <td>2.644304</td>\n",
+       "      <td>3.236194</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>172.610686</td>\n",
+       "      <td>1.593866e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>107701.748378</td>\n",
+       "      <td>9.519088</td>\n",
+       "      <td>10.759588</td>\n",
+       "      <td>6.500000</td>\n",
+       "      <td>69621.713378</td>\n",
+       "      <td>2.469066e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Avg. Area Income  Avg. Area House Age  Avg. Area Number of Rooms  \\\n",
+       "count       5000.000000          5000.000000                5000.000000   \n",
+       "mean       68583.108984             5.977222                   6.987792   \n",
+       "std        10657.991214             0.991456                   1.005833   \n",
+       "min        17796.631190             2.644304                   3.236194   \n",
+       "max       107701.748378             9.519088                  10.759588   \n",
+       "\n",
+       "       Avg. Area Number of Bedrooms  Area Population         Price  \n",
+       "count                   5000.000000      5000.000000  5.000000e+03  \n",
+       "mean                       3.981330     36163.516039  1.232073e+06  \n",
+       "std                        1.234137      9925.650114  3.531176e+05  \n",
+       "min                        2.000000       172.610686  1.593866e+04  \n",
+       "max                        6.500000     69621.713378  2.469066e+06  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe(percentiles=[])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1219e4f2-89c5-4c53-afe1-b7e56c73e69c",
+   "metadata": {},
+   "source": [
+    "# Using .columns to return the list of column names in the dataframe"
    ]
   }
  ],
