--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -537,6 +537,29 @@
    "source": [
     "# Using .columns to return the list of column names in the dataframe"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c0eacbb9-e8fc-4cac-8fd9-136370344876",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Avg. Area Income', 'Avg. Area House Age', 'Avg. Area Number of Rooms',\n",
+       "       'Avg. Area Number of Bedrooms', 'Area Population', 'Price', 'Address'],\n",
+       "      dtype='str')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
   }
  ],
  "metadata": {
